@@ -1,0 +1,4 @@
+module Gosu
+  def max_window_width; screen_width * 0.9; end
+  def max_window_height; screen_height * 0.8; end
+end
