@@ -16,7 +16,7 @@ class Menu < Gui
 
     create_background
 
-    horizontal padding_left: 30, padding_top: 0, spacing: 0 do
+    horizontal padding_left: ($window.width - 708) / 2, padding_top: ($window.height - 475) / 2, spacing: 0 do
       @left_priests = vertical padding_top: 12, padding_left: 0, padding_right: 0, spacing: 14
       vertical spacing: 0, padding: 0 do
         heading = label "Wrath", font_size: 120, color: Color.rgb(50, 120, 255), width: 500, justify: :center
@@ -53,7 +53,7 @@ class Menu < Gui
   def setup
     super
 
-    icons = Priest::NAMES.map {|name| ScaledImage.new(Priest.icon(name), $window.sprite_scale * 3) }
+    icons = Priest::NAMES.map {|name| ScaledImage.new(Priest.icon(name), 12) }
     @left_priests.clear
     @left_priests.with do
       icons[0..3].each_with_index {|icon, i| label '', icon: icon, tip: Priest.title(Priest::NAMES[i]) }
